feat: postCellhandler, minor fixes
